--- a/index.html
+++ b/index.html
@@ -9,9 +9,37 @@
 </head>
 <body>
 
+    <main>
 
-    <script src="scripts/main-js.js"></script>
+    <div class="container text-center py-4">
+
+        <div class="row row-cols-1">
+
+            <div class="col">
+
+                <h1>Benvenuto utente!</h1>
+
+                <h3 class="py-4">Questo è un generatore di password automatico</h3>
+
+                <p class="py-5"> 
+
+                        <div class="text-danger" id="password"></div>
+
+                        <div class="text-warning py-5" id="password_spaces"></div>
+
+                </p>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    </main>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    
+    <script src="scripts/main-js.js"></script>
 </body>
 </html>
