--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <main>
 
+        <!-- Used bootstrap logic for layout even if de facto not needed -->
+
     <div class="container text-center py-4">
 
         <div class="row row-cols-1">
@@ -19,15 +21,17 @@
 
                 <h1>Benvenuto utente!</h1>
 
-                <h3 class="py-4">Questo è un generatore di password automatico</h3>
+                <h5 class="py-4 lh-lg">
+                    Questo è un generatore di password automatico. La tua password consisterà in: 
+                    Nome + Cognome + Colore preferito + Età sommata al numero 21.
+                    Te ne diamo una versione con gli spazi in mezzo just 4 fun.
+                </h5>
 
-                <p class="py-5"> 
+                <!-- From now on elements are completely empty, else visual result before user input might have looked cheesy -->
 
-                        <div class="text-danger" id="password"></div>
+                        <div class="pt-4 text-danger" id="password"></div>
 
                         <div class="text-warning py-5" id="password_spaces"></div>
-
-                </p>
 
             </div>
 
@@ -36,8 +40,6 @@
     </div>
 
     </main>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="scripts/main-js.js"></script>
